@@ -65,8 +65,9 @@ sub srv {
     Danga::Socket->AddTimer(5.0, sub {
         return if $self->{became_readable};
         $self->{timed_out} = 1;
-        $logger->debug("DNS lookup for '$hostname' timed out");
+        $logger->debug("DNS 'SRV' lookup for '$hostname' timed out");
         $callback->();
+        $self->close;
     });
 
     $self->watch_read(1);
@@ -108,7 +109,7 @@ sub new {
     Danga::Socket->AddTimer(5.0, sub {
         return if $self->{became_readable};
         $self->{timed_out} = 1;
-        $logger->debug("DNS lookup for '$hostname' timed out");
+        $logger->debug("DNS 'A' lookup for '$hostname' timed out");
         $callback->();
         $self->close;
     });
